[package]
name = "mri-sys"
version = "0.1.2"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "Rust bindings to Mat'z Ruby interpreter"
repository = "https://github.com/dylanmckay/mri-sys"
readme = "README.md"
keywords = ["ruby", "matz", "interpreter", "plugin"]

license = "MIT"

build = "build.rs"

[dependencies]
libc = ">= 0.2.11"

[build-dependencies]
libc = ">= 0.2.11"
