[package]
name = "mri-sys"
version = "0.2.4"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Rust bindings to Mat'z Ruby interpreter"
repository = "https://github.com/dylanmckay/mri-sys"
readme = "README.md"
keywords = ["ruby", "matz", "interpreter", "plugin"]

license = "MIT"

build = "build.rs"

[dependencies]
libc = ">= 0.2.11"

[build-dependencies]
libc = ">= 0.2.11"
